--- a/contato.html
+++ b/contato.html
@@ -20,7 +20,7 @@
         <ul id="header-nav">
           <li><a href="index.html">Home</a></li>
           <li><a href="cursos.html">Cursos</a></li>
-          <li><a href="contato.html">Contato</a></li>
+          <li><a href="contato.html"><u>Contato</u></a></li>
           <li><a href="adm.html">Área ADM</a></li>
         </ul>
       </nav>
@@ -98,10 +98,10 @@
         <section id="footer-social">
           <h3 id="footer-headers">Redes sociais</h3>
           <div id="social-box">
-            <img src="assets/twitter.svg" alt="twitter-logo" />
-            <img src="assets/linkedin.svg" alt="linkedin-logo" />
-            <img src="assets/face.svg" alt="facebook-logo" />
-            <img src="assets/insta.svg" alt="instagram-logo" />
+            <a href="https://twitter.com/home" target="_blank"><img src="assets/twitter.svg" alt="twitter-logo"/></a>
+            <a href="https://linkedin.com/home" target="_blank"><img src="assets/linkedin.svg" alt="linkedin-logo" /></a>
+            <a href="https://facebook.com/home" target="_blank"><img src="assets/face.svg" alt="facebook-logo" /></a>
+            <a href="https://instagram.com/home" target="_blank"><img src="assets/insta.svg" alt="instagram-logo" /></a>
           </div>
         </section>
 
